--- a/index.html
+++ b/index.html
@@ -76,7 +76,13 @@
                     <div class="mini-light red"></div>
                     <div class="mini-light red"></div>
                 </div>
-                <div id="main-screen"></div> <!-- ************************* HERE GOES POKEMON IMG ********************-->
+                <div id="main-screen">
+                    <div class="screen__image">
+                        <img src="" class="poke-front-image" alt="front">
+                    </div>
+
+                </div> <!-- ************************* HERE GOES POKEMON IMG ********************-->
+
                 <div class="bottom-screen-lights">
                     <div class="small-light red">
                         <div class="dot light-red"></div>
@@ -201,5 +207,6 @@
         </div>
     </div>
 </div>
+    <script src="script.js"></script>
 </body>
 </html>
