--- a/index.html
+++ b/index.html
@@ -76,13 +76,11 @@
                     <div class="mini-light red"></div>
                     <div class="mini-light red"></div>
                 </div>
-                <div id="main-screen">
-                    <div class="screen__image">
-                        <img src="" class="poke-front-image" alt="front">
-                    </div>
-
-                </div> <!-- ************************* HERE GOES POKEMON IMG ********************-->
-
+                <img id="main-screen" src=" " class="principal" />
+<!--                    <div class="screen__image">-->
+<!--                        <img src="" class="poke-front-image" alt="">-->
+<!--                    </div>-->
+                    <!-- ************************* HERE GOES POKEMON IMG ********************-->
                 <div class="bottom-screen-lights">
                     <div class="small-light red">
                         <div class="dot light-red"></div>
@@ -156,7 +154,7 @@
         <!---------------------------------------- Top screen --------------------------------------------------------->
         <div class="top-screen-container">
             <div id="about-screen" class="right-panel-screen"> <!-- ************ info to display *******************-->
-                Moves: razor-wind, swords-dance, cut, bind
+                Moves:
             </div>
         </div>
         <!-- Blue Buttons -->
@@ -186,8 +184,9 @@
                     </div>
                 </div>
                 <div class="white-squares-container">
-                    <div class="white-square"></div>
-                    <div class="white-square"></div>
+                    <img id="prev1" src="" class="center-left-container" />
+                    <!--********** img evolutions *********************-->
+                    <!--<div class="white-square"></div> -->
                 </div>
             </div>
             <div class="center-right-container">
@@ -203,7 +202,8 @@
         <!------------------------------------------- Bottom screens ---------------------------------------------->
         <div class="bottom-screens-container">
             <div id="type-screen" class="right-panel-screen">Previous Evolution</div>
-            <div id="id-screen" class="right-panel-screen">#1</div> <!--******    ID number     **************************** -->
+            <div id="id-screen" class="right-panel-screen">#1</div>
+            <!--******    ID number     **************************** -->
         </div>
     </div>
 </div>
