--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="mini-light red"></div>
                     <div class="mini-light red"></div>
                 </div>
-                <img id="main-screen" src=" " class="principal" />
+                <img id="main-screen" src=""  />
 <!--                    <div class="screen__image">-->
 <!--                        <img src="" class="poke-front-image" alt="">-->
 <!--                    </div>-->
@@ -109,7 +109,8 @@
                     <div>.</div>
                 </div>
                 <div class="green-screen">
-                    <span id="name-screen">bulbasaur</span> <!----------- here place name of pokemon ------------------->
+                    <span id="name-screen" ></span>
+                    <!----------- here place name of pokemon ------------------->
                 </div>
                 <div class="right-nav-container">
                     <div class="nav-button">
@@ -202,7 +203,7 @@
         <!------------------------------------------- Bottom screens ---------------------------------------------->
         <div class="bottom-screens-container">
             <div id="type-screen" class="right-panel-screen">Previous Evolution</div>
-            <div id="id-screen" class="right-panel-screen">#1</div>
+            <div id="id-screen" class="right-panel-screen"></div>
             <!--******    ID number     **************************** -->
         </div>
     </div>
