--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
         <!---------------------------------------- Top screen --------------------------------------------------------->
         <div class="top-screen-container">
-            <div id="about-screen" class="right-panel-screen"> <!-- ************ info to display *******************-->
+            <div id="about-screen" class="right-panel-screen"> <!-- ************ info to display ****************-->
                 Moves:
             </div>
         </div>
